Allow installer to provide a CheckPhish API key

--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -12,10 +12,11 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-    <p>Last revised 17AUG2020</p>
+    <p>Last revised 21AUG2020</p>
     <h2>Super-simple no-nonsense privacy policy</h2>
     <p>The community that maintains this Slack integration will do our level best to avoid collecting, retaining, communicating, or using any of your data other than as strictly necessary for the operation and improvement of this integration.</p>
     <p>We may periodically review the corresponding checkphish.ai dashboard for URLs submitted with this integration.</p>
+    <p>We store various information provided by Slack at installation so that this App can respond appropriately to the team, user, and channel for which the app is installed.</p>
     <p>We may temporarily log server access for diagnostic and administrative purposes (including the contents of each slash command sent to this integration), we may review those logs periodically, and retain those logs in accordance with our hosting providers' default log retention configuration.</p>
     <p>We may revise this privacy policy from time to time.</p>
     <p>We currently use Google for hosting this service, which connects Slack to Bolster's CheckPhish API, so if you're interested in using this integration, you may wish to also review <a href="https://slack.com/privacy-policy">Slack's Privacy Policy</a>,
