--- a/views/install.ejs
+++ b/views/install.ejs
@@ -13,6 +13,18 @@
   <body>
     <h1>Installation</h1>
 
+    <p>If you provide an optional CheckPhish API key, the summaries of API usage will be shown in the associated dashboard, and requests made will be limited by your own quota rather than a shared quota.</p>
+    <p>If you don't provide a key, the Slack App will function, but the quota is shared among others in the community who also did not provide an API key, and you won't be able to see usage stats in your dashboard.</p>
+    <p>If you change your mind later, you can uninstall and reinstall the CheckPhish Slack App.</p>
+
+    <form method="post">
+      <div class="form-group">
+        <label for="apikey">CheckPhish API Key</label>
+        <input type="password" class="form-control" name="apiKey" id="apikey" placeholder="Optional">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
