--- a/views/authsuccess.ejs
+++ b/views/authsuccess.ejs
@@ -1,29 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <%- include('partials/head') %>
     <title>Success!</title>
   </head>
   <body>
-    <h1>Success!</h1>
+    <div class="container">
+      <h1>Success!</h1>
 
-    <p>You've successfully added the community-built CheckPhish Slack integration to the <%=team%> Slack workspace.</p>
-    <p>To submit a website to Bolster's powerful deep learning CheckPhish scanner for real-time phishing and fraudulent website detection, in any channel in your Slack workspace enter:</p>
-    <code>
-      /checkphish [url to check]
-    </code>
-    <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <p>You've successfully added the community-built CheckPhish Slack integration to the <%=team%> Slack workspace.</p>
+      <p>To submit a website to Bolster's powerful deep learning CheckPhish scanner for real-time phishing and fraudulent website detection, in any channel in your Slack workspace enter:</p>
+      <code>
+        /checkphish [url to check]
+      </code>
+      <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
+    </div>
+    <%- include ('partials/bodylast') %>
   </body>
 </html>
