Added favicon. And all that that implies.

--- a/src/views/install.ejs
+++ b/src/views/install.ejs
@@ -15,7 +15,7 @@
       <form method="post">
         <div class="form-group">
           <label for="apikey">CheckPhish API Key</label>
-          <input type="password" class="form-control" name="apiKey" id="apikey" placeholder="Optional">
+          <input type="password" autocomplete="current-password" class="form-control" name="apiKey" id="apikey" placeholder="Optional">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
