--- a/src/views/install.ejs
+++ b/src/views/install.ejs
@@ -9,11 +9,18 @@
       <h1>Installation</h1>
 
       <p>If you provide an optional CheckPhish API key, the summaries of API usage will be shown in the associated dashboard, and requests made will be limited by your own quota rather than a shared quota.</p>
-      <p>If you don't provide a key, the Slack App will function, but the quota is shared among others in the community who also did not provide an API key, and you won't be able to see usage stats in your dashboard.</p>
-      <p>If you change your mind later, you can uninstall and reinstall the CheckPhish Slack App.</p>
+      <p>If you don't provide a key, the Slack App will function, but the quota is shared among others in the community, and you won't be able to see usage stats in your dashboard.</p>
+      <p>If you change your mind later, you can reinstall the CheckPhish Slack App.</p>
 
       <form method="post">
         <div class="form-group">
+          <!-- This username text input is here only to remove a Chrome warning regarding assistive
+          technology. We don't WANT a user name, but since we used "current-password" for the api key,
+          Chrome thinks we have a corresponding user name (...and should include the context for screen
+          readers). But we don't, yet, since we have no idea how the user got here. For our similar form
+          for our 'config' Slack slash command, where we DO know who the user is, we should include
+          a user name or similar information, hidden, so that screen readers CAN provide that context. -->
+          <input type="text" class="d-none" autocomplete="username" value="">
           <label for="apikey">CheckPhish API Key</label>
           <input type="password" autocomplete="current-password" class="form-control" name="apiKey" id="apikey" placeholder="Optional">
         </div>
