--- a/src/views/privacy.ejs
+++ b/src/views/privacy.ejs
@@ -7,14 +7,15 @@
   <body>
     <div class="container">
       <h1>Privacy Policy</h1>
-      <p>Last revised 28SEP2020</p>
+      <p>Last revised 07OCT2020</p>
       <h2>Super-simple no-nonsense privacy policy</h2>
       <p>The community that maintains this Slack integration will do our level best to avoid collecting, retaining, communicating, or using any of your data other than as strictly necessary for the operation and improvement of this integration.</p>
       <p>We store various information provided by Slack at installation so that this App can respond appropriately to the team, user, and channel for which the app is installed.</p>
       <p>If you provide an optional CheckPhish API key at installation, we store that key for calling the CheckPhish API on your behalf.</p>
+      <p>Where we provide a link to a web site, we may pass UTM parameters so that the site we're linking to knows the traffic came from this app.</p>
       <p>We may periodically review the checkphish.ai dashboard for URLs submitted with this integration without the optional user-provided API key (i.e. if you provide a key, we use yours and can't see your dashboard, but if you don't provide a key, we use ours, and so we can see what URLs you submit).</p>
       <p>We may temporarily log server access for diagnostic and administrative purposes (including the contents of each slash command sent to this integration), we may review those logs periodically, and retain those logs in accordance with our hosting providers' default log retention configuration.</p>
-      <p>We may revise this privacy policy from time to time.</p>
+      <p>We are likely to revise this privacy policy from time to time.</p>
       <p>We currently use Google for hosting this service, which connects Slack to Bolster's CheckPhish API, so if you're interested in using this integration, you may wish to also review <a href="https://slack.com/privacy-policy">Slack's Privacy Policy</a>,
       <a href="https://checkphish.ai/privacy-policy/">CheckPhish's Privacy Policy</a>, and <a href="https://cloud.google.com/logging/quotas#logs_retention_periods">Google's Log Retention configuration</a>.</p>
     </div>
