Changed installation button from submit to install

--- a/src/views/install.ejs
+++ b/src/views/install.ejs
@@ -24,7 +24,7 @@
           <label for="apikey">CheckPhish API Key</label>
           <input type="password" autocomplete="current-password" class="form-control" name="apiKey" id="apikey" placeholder="Optional">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Install</button>
       </form>
     </div>
     <%- include ('partials/bodylast') %>
