Parameterize command name to better distinguish between dev and prod

--- a/src/views/authsuccess.ejs
+++ b/src/views/authsuccess.ejs
@@ -12,7 +12,7 @@
       <p>To submit a website to Bolster's powerful deep learning CheckPhish scanner for real-time phishing and fraudulent website detection, in any channel in your Slack workspace enter:</p>
       <p>
         <code>
-          /checkphish [url to check]
+          /<%=slackSlashCommand%> [url to check]
         </code>
       </p>
       <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
