--- a/src/views/authsuccess.ejs
+++ b/src/views/authsuccess.ejs
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <%- include('partials/head') %>
-    <title>Success!</title>
+    <title>Community-Built Slack App for CheckPhish Installation Authorization Succeeded</title>
   </head>
   <body>
+    <%- include('partials/header') %>
+
     <div class="container">
       <h1>Success!</h1>
 
@@ -17,6 +19,7 @@
       </p>
       <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
     </div>
+    <%- include('partials/footer') %>
     <%- include ('partials/bodylast') %>
   </body>
 </html>
