--- a/src/views/support.ejs
+++ b/src/views/support.ejs
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <%- include('partials/head') %>
-    <title>Support</title>
+    <title>Community-Built Slack App for CheckPhish Support</title>
   </head>
   <body>
+    <%- include('partials/header') %>
     <div class="container">
       <h1>Support</h1>
 
-      <p>This app is a community-built Slack integration of the CheckPhish API, and all support is voluntary. Please consider joining the <a href=https://checkphish.slack.com>CheckPhish community Slack workspace.</a></p>
+      <p>This app is a community-built Slack integration of the CheckPhish API. Please consider joining the <a href=https://checkphish.slack.com>CheckPhish community Slack workspace.</a></p>
       <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
     </div>
+    <%- include('partials/footer') %>
     <%- include ('partials/bodylast') %>
   </body>
 </html>
