--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,16 +1,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <link rel="apple-touch-icon" sizes="120x120" href="/public/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/public/favicons/site.webmanifest">
-    <link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/public/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicons/favicon-16x16.png">
+    <link rel="manifest" href="public/favicons/site.webmanifest">
+    <link rel="mask-icon" href="public/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="public/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/public/favicons/browserconfig.xml">
+    <meta name="msapplication-config" content="public/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+    <!-- Custom styles for this site -->
+    <link href="public/css/checkphish.css" rel="stylesheet">
