Redirect from root to install page
Tweak description tag

--- a/src/views/install.ejs
+++ b/src/views/install.ejs
@@ -4,7 +4,7 @@
     <%- include('partials/head') %>
     <title>Community-Built Slack App for CheckPhish Installation</title>
 
-    <meta name="description" content="Installation page for the Community-Built Slack App for CheckPhish, which is a free Slack slash command for detecting phishing, fraudulent, and other categories of sites in real time.">
+    <meta name="description" content="Install the Community-Built Slack App for CheckPhish, which is a free Slack slash command for detecting phishing, fraudulent, and other categories of sites in real time.">
 
   </head>
   <body>
