--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,10 +1,16 @@
 <footer class="text-muted">
   <div class="container">
+    <ul class="list-unstyled list-inline text-left">
+      <li class="list-inline-item"><a href="/slackappprivacy">Privacy</a></li>
+      <li class="list-inline-item"><a href="/slackappsupport">Support</a></li>
+    </ul>
+  </div>
+  <div class="container">
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
     <p>&copy; 2020 Tim Johns</p>
-    <p>Visit <a href="https://checkphish.ai/">CheckPhish.ai</a> for more information about <a href="https://bolster.ai">Bolster's</a> free URL scanner to detect phishing and fraudulent sites.</p>
+    <p>Visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a> for more information about <a href="https://bolster.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">Bolster's</a> free URL scanner to detect phishing and fraudulent sites.</p>
   </div>
 </footer>
 
