--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">This app is a community-built Slack integration of the <a href="https://checkphish.ai/checkphish-api">CheckPhish API</a> from <a href="https://bolster.ai">Bolster</a>. Please consider joining the <a href=https://checkphish.slack.com>CheckPhish community Slack workspace</a>. This project is hosted, supported, run, and maintained by Tim Johns. Please contact Tim for more information, including how to contribute to this project.</p>
+          <p class="text-muted">This app is a community-built Slack integration of the <a href="https://checkphish.ai/checkphish-api">CheckPhish API</a> from <a href="https://bolster.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">Bolster</a>. Please consider joining the <a href=https://checkphish.slack.com>CheckPhish community Slack workspace</a>. This project is hosted, supported, run, and maintained by Tim Johns. Please contact Tim for more information, including how to contribute to this project.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
