Minor cleanup to support page

--- a/src/views/support.ejs
+++ b/src/views/support.ejs
@@ -9,10 +9,10 @@
     <div class="container">
       <h1>Support</h1>
 
-      <p>This app is a community-built Slack integration of the CheckPhish API. Please consider joining the <a
-          href=https://checkphish.slack.com>CheckPhish community Slack workspace.</a> This project is hosted, supported, run,
-        and maintained by <a href="mailto:tim+supportcheckphishslackapp@timjohns.com">Tim Johns</a>. Please contact Tim for support or for more
-        information, including how to contribute to this project.</p>
+      <p>This app is a community-built Slack integration of the CheckPhish API, and is hosted, supported, run,
+        and maintained by <a href="mailto:tim+supportcheckphishslackapp@timjohns.com">Tim Johns</a>.</p>
+      <p>Please consider joining the <a href=https://checkphish.slack.com>CheckPhish community Slack workspace.</a></p>
+      <p>Please email <a href="mailto:tim+supportcheckphishslackapp@timjohns.com">Tim</a> for support or for more information, including how to contribute to this project.</p>
       <p>For more information on CheckPhish, please visit <a href="https://checkphish.ai/?utm_source=slack_plugin&utm_medium=slack&utm_campaign=tim_johns">CheckPhish.ai</a></p>
     </div>
     <%- include('partials/footer') %>
