--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -14,5 +14,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+    <!-- Font Awesome (note this makes the whole page slow, but doesn't flash the fonts...) -->
+    <script src="https://kit.fontawesome.com/6889474666.js" integrity="sha256-5Y3XLJe5Ev2uO1GmLyViKXG56lnlU1BbaLDpUc90UQU=" crossorigin="anonymous"></script>
+
     <!-- Custom styles for this site -->
     <link href="public/css/checkphish.css" rel="stylesheet">
